[gd_scene load_steps=5 format=3 uid="uid://btqne4qta7yc4"]

[ext_resource type="Script" uid="uid://drdwsfbbrcfbt" path="res://scenes/home.gd" id="1_svoro"]
[ext_resource type="Texture2D" uid="uid://1apgi6slbmed" path="res://ui/icons/mensajeria.png" id="2_svoro"]
[ext_resource type="Texture2D" uid="uid://d0j1pwf73owq7" path="res://ui/icons/gallery.webp" id="3_svoro"]
[ext_resource type="Texture2D" uid="uid://bmqircwnlj4ix" path="res://ui/icons/mail.webp" id="4_yk4sq"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svoro")

[node name="CaseInfo" type="Label" parent="."]
layout_mode = 2
offset_top = 260.0
offset_right = 298.0
offset_bottom = 283.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="btn_messages" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_svoro")

[node name="btn_gallery" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_svoro")

[node name="btn_mail" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_yk4sq")
